[package]
name = "tkn-watch"
version = "0.4.0"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
description = "watch tekton pipelinerun execution"
build = "build.rs"
keywords = ["kubernetes", "tekton", "pipelines"]

[dependencies]
kube = { version = "0.77.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.127"
askama = "0.12.1"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
clap = { version = "3.2", features = ["derive", "cargo"] }
regex = "1.10.6"
openssl = { version = "0.10.66", features = ["vendored"] }
spinner = "0.5.0"
goldie = "0.5.0"


[build-dependencies]
clap = { version = "3.2", features = ["cargo"] }
clap_complete = "3.2"
goldie = "0.5.0"
